fix overflowing editor

--- a/assets/css/components/ace_editor.scss
+++ b/assets/css/components/ace_editor.scss
@@ -1,7 +1,5 @@
 .ace_editor {
-  top: 20px;
-  left: 20px;
-  right: 20px;
-  bottom: 20px;
-  height: 100%;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
