--- a/assets/css/components/main.scss
+++ b/assets/css/components/main.scss
@@ -2,6 +2,7 @@
 
 .main {
   position: absolute;
+  overflow: hidden;
   left: $sidebar-width;
   top: 0;
   right: 0;
